--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>software-test</title>
   </head>
-  <body style="min-width:1100px;">
+  <body style="min-width:1100px;margin: 0px">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
